--- a/dev.env
+++ b/dev.env
@@ -18,7 +18,7 @@ SMTP_USER=your-email@gmail.com
 SMTP_PASSWORD=your-app-specific-password
 
 # Application
-PROJECT_NAME=Family Dashboard
+PROJECT_NAME=Framily Dashboard
 BACKEND_CORS_ORIGINS=["http://localhost:8000", "http://localhost:3000"]
 
 # First superuser
